fixed spacing issue with title in masthead

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -52,3 +52,11 @@
 .test {
   line-height: 0px;
 }
+
+#site-subtitle {
+  line-height: 0.6em;
+}
+
+#site-title {
+  margin-top: -0.4em;
+}
